# DescriptorsTestbench2.0

./: .gitignore  CMakeLists.txt
inc/: TestCase.h  callbacks.h  cloud.h  descriptiveness.h  parameters.h  preprocessing.h
inc/descriptors/: bshot.h  drink.h  random_guess.h
inc/descriptors/impl/: bshot.hpp  drink.hpp
inc/impl/: TestCase.hpp  cloud.hpp  descriptiveness.hpp
legacy/: drink.h  drink.hpp
src/: TestCase.cpp  cloud.cpp  descriptiveness.cpp  main.cpp  parameters.cpp  preprocessing.cpp
tools/: AUC.cpp
